# agv-system

./: README.md  docker-compose.yml  mock_agv.py  pyproject.toml
backend/: requirements.txt
backend/server/: settings.py  urls.py
backend/vda5050/: admin.py  graph_engine.py  models.py  serializers.py  signals.py  views.py
backend/vda5050/management/commands/: run_mqtt_listener.py  setup_test_graph.py  test_path.py
backend/vda5050/migrations/: 0006_alter_graphedge_length_alter_graphedge_max_velocity_and_more.py
backend/vda5050/modules/: battery_manager.py  constant.py  scheduler.py
backend/vda5050/modules/bidding/: README.md  auction.py  engine.py
backend/vda5050/modules/bidding/calculators/: baseline.py  bid.py  greedy_bid.py  ssi_marginal_bid.py  transport.py
tests/load_balancing/: test_agv_load_balancing.py
tests/simulators/: advanced_mock_agv.py  config_energy.py  config_sim.py  multi_mock_agv.py  scenarios.py
